syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "schedule_messages.proto";

option go_package = "./;pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
	info: {
		title: "Schedule API";
		version: "0.0.1";
	};
  security_definitions: {
    security: {
      key: "bearer"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Authentication token, prefixed by Bearer: Bearer <token>"
      }
    }
  };
  security: {
    security_requirement: {
      key: "bearer"
    }
  };
};

service ScheduleService{
  rpc CreateSchedule (CreateScheduleRequest) returns (CreateScheduleResponse) {
    option (google.api.http) = {
      post: "/schedules"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to create a new schedule";
      summary: "Create a new schedule";
    };
  };
  rpc UpdateScheduleById (UpdateScheduleByIdRequest) returns (UpdateScheduleByIdResponse) {
    option (google.api.http) = {
      patch: "/schedules/{id}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to update schedule by id";
      summary: "Update schedule by id";
    };
  };
  rpc DeleteScheduleById (DeleteScheduleByIdRequest) returns (DeleteScheduleByIdResponse) {
    option (google.api.http) = {
      delete: "/schedules/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to delete schedule by id";
      summary: "Delete schedule by id";
    };
  };

  rpc FindSchedules (FindSchedulesRequest)returns (FindSchedulesResponse){
    option (google.api.http) = {
			get: "/schedules"
		};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to find schedules";
      summary: "Find Schedules";
    };
  }
  rpc FindScheduleById (FindScheduleByIdRequest) returns (FindScheduleByIdResponse) {
    option (google.api.http) = {
			get: "/schedules/{id}"
		};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to find schedule by id";
      summary: "Find Schedule By Id";
    };
  };
}